Bug 88642 - Trilinear sampling on cubemap wrongly sampled at the border of rasterized triangle on HAWAII
Summary: Trilinear sampling on cubemap wrongly sampled at the border of rasterized tri...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: 10.4
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
: 87518 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-01-20 22:52 UTC by vincent
Modified: 2015-02-06 03:09 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Test case (7.94 KB, text/plain)
2015-01-20 22:52 UTC, vincent
Details
Diagonal line (201.99 KB, image/png)
2015-01-20 22:56 UTC, vincent
Details

Description vincent 2015-01-20 22:52:43 UTC
Created attachment 112566 [details]
Test case

Hi,

on a R290X with a fresh fedora 21 install (Mesa 10.4.1) a fragment shader sampling a cubemap texture with trilinear filtering is not correctly executed on the edge of rasterized triangles.

I've included a patch against piglit that display the behaviour. On my system the test display a small orange diagonal line on top of the color pattern. 
(the test doesn't check result atm)

I think it's related to some quad pattern : in my app that has a depth buffer the line follows the edge of the geometry.
Comment 1 vincent 2015-01-20 22:56:12 UTC
Created attachment 112567 [details]
Diagonal line
Comment 2 Michel Dänzer 2015-01-21 04:10:07 UTC
That kind of artifacts is usually due to whole quad mode not being enabled when it should be. The LLVM patch http://lists.cs.uiuc.edu/pipermail/llvm-commits/Week-of-Mon-20150119/254035.html fixes it.
Comment 3 smoki 2015-01-26 15:07:41 UTC
*** Bug 87518 has been marked as a duplicate of this bug. ***
Comment 4 Michel Dänzer 2015-02-06 03:09:16 UTC
Author: daenzer
Date: Thu Feb  5 20:51:20 2015
New Revision: 228372

URL: http://llvm.org/viewvc/llvm-project?rev=228372&view=rev
Log:
R600/SI: Also enable WQM for image opcodes which calculate LOD v3


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.